examples/test/testpolicy14293.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14293
  namespace: namespace194
spec:
  podSelector:
    matchLabels:
      key23: value31
      key26: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value46
          key25: value5
      podSelector:
        matchLabels:
          key4: value22
          key31: value29
          key8: value0
